@@ -1,3 +1,8 @@
+2003-05-11  Phil Edwards  <pme@gcc.gnu.org>
+
+	* testsuite/Makefile.am:  Properly quote LD_RUN_PATH.
+	* testsuite/Makefile.in:  Regenerate.
+
 2003-05-11  Gabriel Dos Reis <gdr@integrable-solutions.net>
 
 	PR libstdc++/3181
